# beatlogs

./: .gitignore  CMakeLists.txt  ClassDependencyInjection.puml  ClassDiagram.puml  ClassDiagramVol2.puml  ClassMediaItemFactory.puml  ClassPlaylistStrategy.puml  README.md
include/: Album.h  EP.h  Folder.h  LibraryTree.h  MediaItem.h  MusicRelease.h  Playlist.h  Song.h  SongContainer.h
src/: Album.cpp  EP.cpp  Folder.cpp  LibraryTree.cpp  MediaItem.cpp  MusicRelease.cpp  Playlist.cpp  Song.cpp  SongContainer.cpp  main.cpp
